update bert4rec model

--- a/notebooks/bert4rec.ipynb
+++ b/notebooks/bert4rec.ipynb
@@ -25,6 +25,14 @@
       "metadata": {},
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/dlyapin/Documents/git_projects/hse-masters-thesis-2026/.venv/lib/python3.11/site-packages/lightfm/_lightfm_fast.py:9: UserWarning: LightFM was compiled without OpenMP support. Only a single thread will be used.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
@@ -90,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -103,7 +111,7 @@
             "Latent factors (n_factors): 256\n",
             "Dropout rate: 0.2\n",
             "Mask probability: 0.15\n",
-            "Session max length: 150\n",
+            "Session max length: 130\n",
             "Loss: softmax\n",
             "Number of negatives: 1\n",
             "Batch size: 256\n",
@@ -327,7 +335,7 @@
               "2189    15304    14462  93485437       1"
             ]
           },
-          "execution_count": null,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -430,7 +438,7 @@
               "173757516    22801    20587  109641767       1"
             ]
           },
-          "execution_count": null,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -447,14 +455,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -511,7 +512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -530,7 +531,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -1179,6 +1180,378 @@
         "</html>\n",
         "\n",
         "Наилучшая конфигурация смогла достичь NDCG@100=0.2774\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Обучение для предсказания на тестовую выборку**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_val_df = pd.concat([train_df, val_df], ignore_index=True)\n",
+        "\n",
+        "builder_trainval = BERT4RecDatasetBuilder(train_val_df)\n",
+        "dataset_trainval, item_net_config_trainval = builder_trainval.build_dataset(\n",
+        "    use_item_embeddings=False,\n",
+        "    use_price_features=True,\n",
+        "    use_temporal_features=False,\n",
+        "    n_factors=N_FACTORS\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def get_custom_trainer(**kwargs):\n",
+        "    from pytorch_lightning import Trainer\n",
+        "    from pytorch_lightning.callbacks import EarlyStopping,  ModelCheckpoint\n",
+        "    \n",
+        "    callbacks = []\n",
+        "    early_stop = EarlyStopping(\n",
+        "        monitor='train_loss',\n",
+        "        patience=5,\n",
+        "        mode='min',\n",
+        "        check_finite=True,\n",
+        "        verbose=False,\n",
+        "    )\n",
+        "    callbacks.append(early_stop)\n",
+        "\n",
+        "    checkpoint = ModelCheckpoint(\n",
+        "        dirpath='./checkpoints/bert4rec',\n",
+        "        filename='bert4rec_test-{epoch:02d}-{train_loss:.4f}',\n",
+        "        save_top_k=2,\n",
+        "        monitor='train_loss',\n",
+        "        mode='min',\n",
+        "        every_n_epochs=10,\n",
+        "        save_last=True,\n",
+        "        verbose=False,\n",
+        "    )\n",
+        "    callbacks.append(checkpoint)\n",
+        "\n",
+        "    trainer_kwargs = {\n",
+        "        'max_epochs': EPOCHS,\n",
+        "        'gradient_clip_val': 1.0,\n",
+        "        'gradient_clip_algorithm': 'norm',\n",
+        "        'callbacks': callbacks\n",
+        "    }\n",
+        "    trainer_kwargs.update(kwargs)\n",
+        "    return Trainer(**trainer_kwargs)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "GPU available: True (mps), used: True\n",
+            "TPU available: False, using: 0 TPU cores\n",
+            "HPU available: False, using: 0 HPUs\n"
+          ]
+        }
+      ],
+      "source": [
+        "model_trainval = BERT4RecModel(\n",
+        "    n_blocks=N_BLOCKS,\n",
+        "    n_heads=N_HEADS,\n",
+        "    n_factors=N_FACTORS,\n",
+        "    dropout_rate=DROPOUT_RATE,\n",
+        "    mask_prob=MASK_PROB,\n",
+        "    session_max_len=SESSION_MAX_LEN,\n",
+        "    train_min_user_interactions=TRAIN_MIN_USER_INTERACTIONS,\n",
+        "    loss=LOSS,\n",
+        "    n_negatives=N_NEGATIVES,\n",
+        "    gbce_t=GBCE_T,\n",
+        "    lr=LEARNING_RATE,\n",
+        "    batch_size=BATCH_SIZE,\n",
+        "    epochs=EPOCHS,\n",
+        "    deterministic=DETERMINISTIC,\n",
+        "    verbose=VERBOSE,\n",
+        "    dataloader_num_workers=DATALOADER_NUM_WORKERS,\n",
+        "    use_pos_emb=USE_POS_EMB,\n",
+        "    use_key_padding_mask=USE_KEY_PADDING_MASK,\n",
+        "    item_net_block_types=item_net_config_trainval['item_net_block_types'],\n",
+        "    get_trainer_func=get_custom_trainer\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "  | Name        | Type                     | Params | Mode \n",
+            "-----------------------------------------------------------------\n",
+            "0 | torch_model | TransformerTorchBackbone | 9.5 M  | train\n",
+            "-----------------------------------------------------------------\n",
+            "9.5 M     Trainable params\n",
+            "0         Non-trainable params\n",
+            "9.5 M     Total params\n",
+            "37.985    Total estimated model params size (MB)\n",
+            "40        Modules in train mode\n",
+            "0         Modules in eval mode\n"
+          ]
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "c1af298c89424d4e88a36c4668bf4d31",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Training: |          | 0/? [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 1min 25s, sys: 7min 38s, total: 9min 4s\n",
+            "Wall time: 1h 19min 42s\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<rectools.models.nn.transformers.bert4rec.BERT4RecModel at 0x153bac190>"
+            ]
+          },
+          "execution_count": 35,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "%%time\n",
+        "model_trainval.fit(dataset_trainval)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "GPU available: True (mps), used: True\n",
+            "TPU available: False, using: 0 TPU cores\n",
+            "HPU available: False, using: 0 HPUs\n",
+            "Restoring states from the checkpoint path at ./checkpoints/bert4rec/bert4rec_test-epoch=69-train_loss=6.8948.ckpt\n",
+            "\n",
+            "  | Name        | Type                     | Params | Mode \n",
+            "-----------------------------------------------------------------\n",
+            "0 | torch_model | TransformerTorchBackbone | 9.5 M  | train\n",
+            "-----------------------------------------------------------------\n",
+            "9.5 M     Trainable params\n",
+            "0         Non-trainable params\n",
+            "9.5 M     Total params\n",
+            "37.985    Total estimated model params size (MB)\n",
+            "40        Modules in train mode\n",
+            "0         Modules in eval mode\n",
+            "Restored all states from the checkpoint at ./checkpoints/bert4rec/bert4rec_test-epoch=69-train_loss=6.8948.ckpt\n",
+            "`Trainer.fit` stopped: No training batches.\n"
+          ]
+        }
+      ],
+      "source": [
+        "last_checkpoint_path = \"./checkpoints/bert4rec/bert4rec_test-epoch=69-train_loss=6.8948.ckpt\"\n",
+        "model_trainval = BERT4RecModel.load_from_checkpoint(last_checkpoint_path)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user_id</th>\n",
+              "      <th>bert4rec_recs</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>11</td>\n",
+              "      <td>[18369, 9961, 25328, 8591, 21601, 750, 9795, 1...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>14</td>\n",
+              "      <td>[19713, 2129, 17530, 16885, 5021, 947, 28842, ...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>21</td>\n",
+              "      <td>[24455, 6375, 6548, 5076, 27310, 25997, 24158,...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>29</td>\n",
+              "      <td>[136, 3548, 30779, 27480, 12571, 10268, 27968,...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>39</td>\n",
+              "      <td>[13391, 19002, 14580, 27517, 17939, 10449, 146...</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   user_id                                      bert4rec_recs\n",
+              "0       11  [18369, 9961, 25328, 8591, 21601, 750, 9795, 1...\n",
+              "1       14  [19713, 2129, 17530, 16885, 5021, 947, 28842, ...\n",
+              "2       21  [24455, 6375, 6548, 5076, 27310, 25997, 24158,...\n",
+              "3       29  [136, 3548, 30779, 27480, 12571, 10268, 27968,...\n",
+              "4       39  [13391, 19002, 14580, 27517, 17939, 10449, 146..."
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "test_users = test_df['user_id'].unique()\n",
+        "\n",
+        "recommendations_test = model_trainval.recommend(\n",
+        "    users=test_users,\n",
+        "    dataset=dataset_trainval,\n",
+        "    k=TOP_K,\n",
+        "    filter_viewed=False,\n",
+        "    on_unsupported_targets=\"ignore\"\n",
+        ")\n",
+        "\n",
+        "recs_test_grouped = recommendations_test.groupby('user_id', as_index=False)['item_id'].agg(list)\n",
+        "recs_test_grouped.columns = ['user_id', 'bert4rec_recs']\n",
+        "recs_test_grouped.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 46,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[Metrics debug] resolved gt_col='test_interactions' item_id_index=0\n",
+            "[Metrics debug] ratings_true shape: (223395, 3) ratings_pred shape: (742500, 3)\n",
+            "  ratings_true dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
+            "  ratings_pred dtypes: {'user_id': dtype('int64'), 'item_id': dtype('int64')}\n",
+            "  user_id=11 gt_count=9 pred_count=100 overlap=2\n",
+            "  user_id=14 gt_count=56 pred_count=100 overlap=4\n",
+            "  user_id=21 gt_count=43 pred_count=100 overlap=8\n",
+            "\n",
+            "At k=10:\n",
+            "  MAP@10       = 0.2842\n",
+            "  NDCG@10      = 0.5934\n",
+            "  Precision@10 = 0.2132\n",
+            "  Recall@10    = 0.0703\n",
+            "\n",
+            "At k=100:\n",
+            "  MAP@100       = 0.0928\n",
+            "  NDCG@100      = 0.2893\n",
+            "  Precision@100 = 0.0597\n",
+            "  Recall@100    = 0.1870\n",
+            "\n",
+            "Other Metrics:\n",
+            "  MRR                 = 0.3294\n",
+            "  Catalog Coverage    = 0.7951\n",
+            "  Diversity     = 0.9959  [0=same recs for all, 1=unique recs]\n",
+            "  Novelty             = 0.8883\n",
+            "  Serendipity         = 0.0302\n"
+          ]
+        }
+      ],
+      "source": [
+        "joined_test = dp.get_grouped_data(train_df, val_df, test_df)\n",
+        "\n",
+        "evaluation_test_df = joined_test.merge(\n",
+        "    recs_test_grouped, \n",
+        "    on='user_id', \n",
+        "    how='left'\n",
+        ")\n",
+        "evaluation_test_df['train_val_interactions'] = evaluation_test_df['train_interactions'] + evaluation_test_df['val_interactions']\n",
+        "\n",
+        "evaluation_test_df['bert4rec_recs'] = evaluation_test_df['bert4rec_recs'].apply(\n",
+        "    lambda x: x if isinstance(x, list) else []\n",
+        ")\n",
+        "\n",
+        "metrics_test_result = calculate_metrics(\n",
+        "    evaluation_test_df,\n",
+        "    train_col='train_val_interactions',\n",
+        "    gt_col='test_interactions',\n",
+        "    model_preds='bert4rec_recs',\n",
+        "    verbose=True\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "116038478"
+            ]
+          },
+          "execution_count": 47,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "model_path_trainval = \"./models_test/bert4rec_model.pkl\"\n",
+        "model_trainval.save(model_path_trainval)"
       ]
     }
   ],
