update bivae model

--- a/notebooks/bivae.ipynb
+++ b/notebooks/bivae.ipynb
@@ -21,7 +21,7 @@
             "System version: 3.11.14 (main, Oct 28 2025, 12:11:54) [Clang 20.1.4 ]\n",
             "Pandas version: 2.3.3\n",
             "Numpy version: 1.26.4\n",
-            "Cornac version: 2.3.5\n"
+            "Cornac version: 2.2.1\n"
           ]
         }
       ],
@@ -42,6 +42,12 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore', category=FutureWarning)\n",
         "\n",
+        "# Fix for scipy sparse matrix .A attribute removed in scipy >= 1.13\n",
+        "from scipy import sparse\n",
+        "for sparse_class in [sparse.csr_matrix, sparse.csc_matrix, sparse.bsr_matrix, sparse.lil_matrix, sparse.dok_matrix, sparse.coo_matrix]:\n",
+        "    if not hasattr(sparse_class, 'A'):\n",
+        "        sparse_class.A = property(lambda self: self.toarray())\n",
+        "\n",
         "import cornac\n",
         "from recommenders.utils.timer import Timer\n",
         "from recommenders.evaluation.python_evaluation import map, ndcg_at_k, precision_at_k, recall_at_k\n",
@@ -59,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -120,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -140,7 +146,7 @@
             "Users in each part (train, val, test) - 7425\n",
             "Train shape: (902543, 12)\n",
             "Val shape: (228339, 13)\n",
-            "Test shape: (223395, 12)\n",
+            "Test shape: (223395, 13)\n",
             "Number of users: 7425\n",
             "Number of items: 30751\n"
           ]
@@ -156,6 +162,9 @@
         "train_df.rename(columns={'user_id': 'userID', 'item_id': 'itemID'}, inplace=True)\n",
         "val_df.rename(columns={'user_id': 'userID', 'item_id': 'itemID'}, inplace=True)\n",
         "val_df['rating'] = 1.0\n",
+        "\n",
+        "test_df.rename(columns={'user_id': 'userID', 'item_id': 'itemID'}, inplace=True)\n",
+        "test_df['rating'] = 1.0\n",
         "\n",
         "print(f\"Train shape: {train_df.shape}\")\n",
         "print(f\"Val shape: {val_df.shape}\")\n",
@@ -360,7 +369,7 @@
               "4     11   2104    0.028233"
             ]
           },
-          "execution_count": 29,
+          "execution_count": null,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -451,7 +460,7 @@
               "26091892   10000   22720    0.036045"
             ]
           },
-          "execution_count": 30,
+          "execution_count": null,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -862,6 +871,262 @@
         "</html>\n",
         "\n",
         "`Наилучшая конфигурация смогли добиться NDCG@100 = 0.162`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Обучение для предсказания на тестовую выборку**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Train set: 7425 users, 30923 items, 782025 interactions\n",
+            "Test set: 7425 users, 26040 items, 193867 interactions\n"
+          ]
+        }
+      ],
+      "source": [
+        "train_val_df = pd.concat([train_df, val_df], ignore_index=True)\n",
+        "trainval_agg = train_val_df.groupby(['userID', 'itemID']).size().reset_index(name='count')\n",
+        "trainval_data = [(str(row['userID']), str(row['itemID']), float(row['count'])) \n",
+        "              for _, row in trainval_agg.iterrows()]\n",
+        "\n",
+        "test_data = [(str(row['userID']), str(row['itemID']), 1.0) for _, row in test_df.iterrows()]\n",
+        "\n",
+        "trainval_set = cornac.data.Dataset.from_uir(trainval_data, seed=SEED)\n",
+        "print(f\"Train set: {trainval_set.num_users} users, {trainval_set.num_items} items, {trainval_set.num_ratings} interactions\")\n",
+        "\n",
+        "test_set = cornac.data.Dataset.from_uir(test_data, seed=SEED)\n",
+        "print(f\"Test set: {test_set.num_users} users, {test_set.num_items} items, {test_set.num_ratings} interactions\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model = cornac.models.BiVAECF(\n",
+        "    k=K,\n",
+        "    encoder_structure=ENCODER_STRUCTURE,\n",
+        "    act_fn=ACT_FN,\n",
+        "    likelihood=LIKELIHOOD,\n",
+        "    n_epochs=EPOCHS,\n",
+        "    batch_size=BATCH_SIZE,\n",
+        "    learning_rate=LEARNING_RATE,\n",
+        "    beta_kl=BETA_KL,\n",
+        "    seed=SEED,\n",
+        "    verbose=True\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "042a6bf2cec045fc970124470ff76642",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/200 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Training took 663.17 seconds\n"
+          ]
+        }
+      ],
+      "source": [
+        "with Timer() as train_time:\n",
+        "    model.fit(trainval_set)\n",
+        "\n",
+        "print(f\"Training took {train_time.interval:.2f} seconds\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from recommenders.models.cornac.cornac_utils import predict_ranking\n",
+        "with Timer() as t:\n",
+        "    all_predictions = predict_ranking(model, trainval_set, usercol='userID', itemcol='itemID', remove_seen=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(742500, 3)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>userID</th>\n",
+              "      <th>itemID</th>\n",
+              "      <th>prediction</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>26234533</th>\n",
+              "      <td>10000</td>\n",
+              "      <td>22671</td>\n",
+              "      <td>0.554279</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26239647</th>\n",
+              "      <td>10000</td>\n",
+              "      <td>13768</td>\n",
+              "      <td>0.515790</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26245878</th>\n",
+              "      <td>10000</td>\n",
+              "      <td>4943</td>\n",
+              "      <td>0.484612</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26246298</th>\n",
+              "      <td>10000</td>\n",
+              "      <td>6343</td>\n",
+              "      <td>0.460553</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>26232574</th>\n",
+              "      <td>10000</td>\n",
+              "      <td>20394</td>\n",
+              "      <td>0.368430</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          userID  itemID  prediction\n",
+              "26234533   10000   22671    0.554279\n",
+              "26239647   10000   13768    0.515790\n",
+              "26245878   10000    4943    0.484612\n",
+              "26246298   10000    6343    0.460553\n",
+              "26232574   10000   20394    0.368430"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "top100 = (all_predictions\n",
+        "          .sort_values(['userID', 'prediction'], ascending=[True, False])\n",
+        "          .groupby('userID', as_index=False)\n",
+        "          .head(100)\n",
+        "         )\n",
+        "print(top100.shape)\n",
+        "top100['userID'] = top100['userID'].astype(np.int64)\n",
+        "top100['itemID'] = top100['itemID'].astype(np.int64)\n",
+        "top100.head()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MAP:\t0.071724\n",
+            "NDCG:\t0.259036\n",
+            "Precision@K:\t0.071981\n",
+            "Recall@K:\t0.256842\n"
+          ]
+        }
+      ],
+      "source": [
+        "eval_map = map(val_df, top100, k=TOP_K)\n",
+        "eval_ndcg = ndcg_at_k(val_df, top100, k=TOP_K)\n",
+        "eval_precision = precision_at_k(val_df, top100, k=TOP_K)\n",
+        "eval_recall = recall_at_k(val_df, top100, k=TOP_K)\n",
+        "\n",
+        "print(\"MAP:\\t%f\" % eval_map,\n",
+        "      \"NDCG:\\t%f\" % eval_ndcg,\n",
+        "      \"Precision@K:\\t%f\" % eval_precision,\n",
+        "      \"Recall@K:\\t%f\" % eval_recall, sep='\\n')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "BiVAECF model is saved to ./models_test/bivae_model.pkl/BiVAECF/2026-02-27_16-55-09-286650.pkl\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "'./models_test/bivae_model.pkl/BiVAECF/2026-02-27_16-55-09-286650.pkl'"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "model_path_trainval = \"./models_test/bivae_model.pkl\"\n",
+        "model.save(model_path_trainval)"
       ]
     }
   ],
