update bivae predict

--- a/notebooks/bivae.ipynb
+++ b/notebooks/bivae.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -882,7 +882,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -965,7 +965,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# model = cornac.models.BiVAECF.load(\"models_test/bivae_model.pkl/BiVAECF/2026-02-27_16-55-09-286650.pkl\")\n",
+        "# model.train_set = trainval_set"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -976,7 +986,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -1056,7 +1066,7 @@
               "26232574   10000   20394    0.368430"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1075,25 +1085,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "MAP:\t0.071724\n",
-            "NDCG:\t0.259036\n",
-            "Precision@K:\t0.071981\n",
-            "Recall@K:\t0.256842\n"
+            "MAP:\t0.033884\n",
+            "NDCG:\t0.161915\n",
+            "Precision@K:\t0.045523\n",
+            "Recall@K:\t0.143933\n"
           ]
         }
       ],
       "source": [
-        "eval_map = map(val_df, top100, k=TOP_K)\n",
-        "eval_ndcg = ndcg_at_k(val_df, top100, k=TOP_K)\n",
-        "eval_precision = precision_at_k(val_df, top100, k=TOP_K)\n",
-        "eval_recall = recall_at_k(val_df, top100, k=TOP_K)\n",
+        "eval_map = map(test_df, top100, k=TOP_K)\n",
+        "eval_ndcg = ndcg_at_k(test_df, top100, k=TOP_K)\n",
+        "eval_precision = precision_at_k(test_df, top100, k=TOP_K)\n",
+        "eval_recall = recall_at_k(test_df, top100, k=TOP_K)\n",
         "\n",
         "print(\"MAP:\\t%f\" % eval_map,\n",
         "      \"NDCG:\\t%f\" % eval_ndcg,\n",
