update bpr model

--- a/notebooks/bpr.ipynb
+++ b/notebooks/bpr.ipynb
@@ -21,7 +21,7 @@
       "System version: 3.11.14 (main, Oct 28 2025, 12:11:54) [Clang 20.1.4 ]\n",
       "Pandas version: 2.3.3\n",
       "Numpy version: 1.26.4\n",
-      "Cornac version: 2.3.5\n"
+      "Cornac version: 2.2.1\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,8 +67,8 @@
      "output_type": "stream",
      "text": [
       "Model: BPR (Bayesian Personalized Ranking)\n",
-      "Latent factors (k): 8192\n",
-      "Max iterations: 2000\n",
+      "Latent factors (k): 4096\n",
+      "Max iterations: 3000\n",
       "Learning rate: 0.001\n",
       "Lambda (regularization): 0.001\n",
       "Batch size: 1000\n"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -747,6 +747,165 @@
     "</html>\n",
     "\n",
     "`Наилучшая конфигурация смогла добиться NDCG@100 = 0.1956`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Обучение для предсказания на тестовую выборку**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set: 7425 users, 30923 items, 782025 interactions\n",
+      "Test set: 7425 users, 26040 items, 193867 interactions\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_val_df = pd.concat([train_df, val_df], ignore_index=True)\n",
+    "trainval_agg = train_val_df.groupby(['userID', 'itemID']).size().reset_index(name='count')\n",
+    "trainval_data = [(str(row['userID']), str(row['itemID']), float(row['count'])) \n",
+    "              for _, row in trainval_agg.iterrows()]\n",
+    "\n",
+    "test_df = test_df.rename(columns={'user_id': 'userID', 'item_id': 'itemID'})\n",
+    "test_data = [(str(row['userID']), str(row['itemID']), 1.0) for _, row in test_df.iterrows()]\n",
+    "\n",
+    "trainval_set = cornac.data.Dataset.from_uir(trainval_data, seed=SEED)\n",
+    "print(f\"Train set: {trainval_set.num_users} users, {trainval_set.num_items} items, {trainval_set.num_ratings} interactions\")\n",
+    "\n",
+    "test_set = cornac.data.Dataset.from_uir(test_data, seed=SEED)\n",
+    "print(f\"Test set: {test_set.num_users} users, {test_set.num_items} items, {test_set.num_ratings} interactions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9934b2752bbc4b65b52735287376b0a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization finished!\n",
+      "Training took 5716.52 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = cornac.models.BPR(\n",
+    "    k=K,\n",
+    "    max_iter=MAX_ITER,\n",
+    "    learning_rate=LEARNING_RATE,\n",
+    "    lambda_reg=LAMBDA_REG,\n",
+    "    seed=SEED,\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "with Timer() as train_time:\n",
+    "    model.fit(trainval_set)\n",
+    "\n",
+    "print(f\"Training took {train_time.interval:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from recommenders.models.cornac.cornac_utils import predict_ranking\n",
+    "bpr_recs = predict_ranking(model, trainval_set, usercol='userID', itemcol='itemID', remove_seen=False)\n",
+    "\n",
+    "bpr_recs_top100 = (bpr_recs\n",
+    "          .sort_values(['userID', 'prediction'], ascending=[True, False])\n",
+    "          .groupby('userID', as_index=False)\n",
+    "          .head(100)\n",
+    "         )\n",
+    "bpr_recs_top100['userID'] = bpr_recs_top100['userID'].astype(np.int64)\n",
+    "bpr_recs_top100['itemID'] = bpr_recs_top100['itemID'].astype(np.int64)\n",
+    "\n",
+    "bpr_recs_grouped = bpr_recs_top100.groupby('userID', as_index=False).itemID.agg(list)\n",
+    "bpr_recs_grouped.columns = ['user_id', 'bpr_recs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAP:\t0.041909\n",
+      "NDCG:\t0.202695\n",
+      "Precision@K:\t0.061415\n",
+      "Recall@K:\t0.186522\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_df['rating'] = 1.0\n",
+    "eval_map = map(test_df, bpr_recs_top100, k=TOP_K)\n",
+    "eval_ndcg = ndcg_at_k(test_df, bpr_recs_top100, k=TOP_K)\n",
+    "eval_precision = precision_at_k(test_df, bpr_recs_top100, k=TOP_K)\n",
+    "eval_recall = recall_at_k(test_df, bpr_recs_top100, k=TOP_K)\n",
+    "\n",
+    "print(\"MAP:\\t%f\" % eval_map,\n",
+    "      \"NDCG:\\t%f\" % eval_ndcg,\n",
+    "      \"Precision@K:\\t%f\" % eval_precision,\n",
+    "      \"Recall@K:\\t%f\" % eval_recall, sep='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BPR model is saved to ./models_test/bpr_model.pkl/BPR/2026-02-27_19-35-26-286646.pkl\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'./models_test/bpr_model.pkl/BPR/2026-02-27_19-35-26-286646.pkl'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_path_trainval = \"./models_test/bpr_model.pkl\"\n",
+    "model.save(model_path_trainval)"
    ]
   }
  ],
